--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1,8 +1,30 @@
 :root {
-  --primaryColor: #273196;
+  --primaryColor: #00b16a;
 }
 body {
   background-color: #e4e4e4;
+}
+/* width */
+::-webkit-scrollbar {
+  border-radius: 5px;
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  border-radius: 5px;
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background: var(--primaryColor);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: var(--primaryColor);
 }
 .layout-container {
   width: 100%;
@@ -15,21 +37,25 @@ body {
 .header {
   width: 100%;
   background-color: var(--primaryColor);
-  height: 60px;
+  height: 80px;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: start;
+  padding: 10px 8px;
   align-items: center;
   color: white;
   overflow: hidden;
+}
+.header img {
+  object-fit: cover;
 }
 .section-container {
   display: grid;
   grid-template-rows: repeat(1, minmax(0, 1fr));
   grid-template-columns: repeat(7, minmax(0, 1fr));
   grid-gap: 0;
-  min-height: calc(100vh - 60px);
-  height: calc(100vh - 60px);
+  min-height: calc(100vh - 80px);
+  height: calc(100vh - 80px);
   background-color: white;
 }
 .side-bar {
@@ -44,7 +70,7 @@ body {
   grid-column: span 6 / span 6;
   overflow: auto;
   text-align: left;
-  margin: 10px 10px 0 10px;
+  margin: 10px 0 0 10px;
   box-sizing: border-box;
 }
 
@@ -79,11 +105,24 @@ body {
 .search-box .search-icon {
   width: 100px;
   height: 100%;
-  background-color: #273196;
+  background-color: var(--primaryColor);
   color: white;
   align-items: center;
   display: flex;
   justify-content: center;
   outline: none;
   border: 0px;
+}
+
+.css-cveggr-MuiListItemIcon-root {
+  margin-right: 5px !important;
+  min-width: 30px !important;
+  color: rgba(0, 0, 0, 0.54);
+  -webkit-flex-shrink: 0;
+  -ms-flex-negative: 0;
+  flex-shrink: 0;
+  display: -webkit-inline-box;
+  display: -webkit-inline-flex;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
 }
