card detail page added

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -126,3 +126,7 @@ body {
   display: -ms-inline-flexbox;
   display: inline-flex;
 }
+.bg-Primary {
+  background-color: var(--primaryColor);
+  color: white;
+}
